--- a/index.html
+++ b/index.html
@@ -8,42 +8,27 @@
     <title>The Human Project</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+    $(document).ready(function() {
+        $("#human-nav-bar").load("html/partial/navbar.html");
+
+    });
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 
-<body class="bg-dark">
+<body class="bg-light human-body">
+    
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html">The Human Project</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse human-nav-bar" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="html/feature.html">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="html/pricing.html">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="html/contactus.html">Contact Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="html/signup.html">Sign Up</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+       <div id="human-nav-bar"></div>
     </header>
     <main>
-        <div class="text-center human-index-div">
+        <div class="text-center human-index-div text-style">
             <h3 class="display-1">Making you human.</h3>
-            <p class="lead">Today, we are more robot than human. Try out The Human Porject and start over from Square
-                One.</p>
-            <button type="button" class="btn btn-light">Learn More</button>
+            <p class="lead">Today, we are more robot than human. Try out The Human Project and start over from square
+                one.</p>
+            <button type="button" class="btn btn-light" style="background-color: #007bff;">Learn More</button>
         </div>
 
     </main>
