--- a/client/html/contactus.html
+++ b/client/html/contactus.html
@@ -55,7 +55,7 @@
         </div>
         <div class="col-6">
             <div class="card">
-                <img src="/img/contactus.jpg" class="card-img-top" alt="...">
+                <img src="/assets/img/contactus.jpg" class="card-img-top" alt="...">
                 <div class="card-body text-center">
 
                     <h4>We know it's hard to be human.</h4>
